sergi alanı ve mezat kısmına eklemeler yapıldı

--- a/sergiAlanı.html
+++ b/sergiAlanı.html
@@ -144,6 +144,66 @@
             </div>
         </div>
     </div>
+    <!-- sepet kısmı(offcanvas) -->
+
+    <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1" id="sepet"
+        aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header bg-warning">
+            <h4 class="offcanvas-title" id="sepetLabel"><b>Sepetim</b></h4>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="table-responsive-sm">
+                <table class="table table-light table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">Ürün Adı</th>
+                            <th scope="col">Fiyat</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="">
+                            <td scope="row">1</td>
+                            <td>Cep Saati</td>
+                            <td>$</td>
+                        </tr>
+                        <tr class="">
+                            <td scope="row">2</td>
+                            <td>Patch Koleksiyonu</td>
+                            <td>$</td>
+                        </tr>
+                        <tr class="">
+                            <td scope="row">3</td>
+                            <td>Dünya Kupası Pull Koleksiyonu</td>
+                            <td>$</td>
+                        </tr>
+                        <tr class="">
+                            <td scope="row">4</td>
+                            <td>Antika Dikiş Makinası</td>
+                            <td>$</td>
+                        </tr>
+                        <tr></tr>
+                    </tbody>
+                    <tfoot>
+                        <tr class="">
+                            <td>#</td>
+                            <td>Toplam Tutar</td>
+                            <td style="background-color: #FFCA2C">$</td>
+                        </tr>
+                        <tr class="">
+                            <button type="reset" class="btn btn-outline-warning">
+                                Sepeti Temizle
+                            </button>
+                            <button type="button" class="btn btn-outline-warning">Onayla</button>
+                        </tr>
+
+                    </tfoot>
+                </table>
+            </div>
+
+        </div>
+    </div>
     
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
