--- a/mezat.html
+++ b/mezat.html
@@ -19,11 +19,11 @@
         <li>
             <img src="assets/images/letter-a.png" alt="Antik Logo" style="padding-top: 9px;">
         </li>
-        <li><a href="#">AntikApp</a></li>
+        <li><a href="#" id="website_name">AntikApp</a></li>
         <li style="margin-left:28%"><a href="anasayfa.html">Anasayfa</a></li>
         <li><a href="#">Mezat</a></li>
         <li><a href="#" data-bs-toggle="offcanvas" data-bs-target="#sepet">Sepetim</a></li>
-        <li><a href="profil.html">Sergi Alanım</a></li>
+        <li><a href="sergiAlanı.html">Sergi Alanım</a></li>
         <li id="nav_register" style="float: right; margin-right: 2rem;">
             <button type="button" class="btn btn-warning btn-sm mt-2">
                 <a href="#" data-bs-toggle="modal" data-bs-target="#login"
