--- a/sergiAlanı.html
+++ b/sergiAlanı.html
@@ -21,7 +21,7 @@
         <li>
             <img src="assets/images/letter-a.png" alt="Antik Logo" style="padding-top: 9px;">
         </li>
-        <li><a href="#">AntikApp</a></li>
+        <li><a href="#" style="color: #FFCA2C;">AntikApp</a></li>
         <li style="margin-left:28%"><a href="anasayfa.html">Anasayfa</a></li>
         <li><a href="mezat.html">Mezat</a></li>
         <li><a href="#" data-bs-toggle="offcanvas" data-bs-target="#sepet">Sepetim</a></li> 
