--- a/anasayfa.html
+++ b/anasayfa.html
@@ -21,11 +21,11 @@
         <li>
             <img src="assets/images/letter-a.png" alt="Antik Logo" style="padding-top: 9px;">
         </li>
-        <li><a href="#">AntikApp</a></li>
+        <li id="website_name"><a href="#" style="color: #FFCA2C;">AntikApp</a></li>
         <li style="margin-left:28%"><a href="#">Anasayfa</a></li>
         <li><a href="mezat.html">Mezat</a></li>
         <li><a href="#" data-bs-toggle="offcanvas" data-bs-target="#sepet">Sepetim</a></li>
-        <li><a href="profil.html">Sergi Alanım</a></li>
+        <li><a href="sergiAlanı.html">Sergi Alanım</a></li>
         <li id="nav_register" style="float: right; margin-right: 2rem;">
             <button type="button" class="btn btn-warning btn-sm mt-2">
                 <a href="#" data-bs-toggle="modal" data-bs-target="#login"
