--- a/mezat.html
+++ b/mezat.html
@@ -6,16 +6,19 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- css -->
     <link rel="stylesheet" href="style_mezat.css">
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
 
 </head>
 
 <body>
     <!-- navbar -->
-    <ul>
+    <ul class="navbar-ul">
         <li>
             <img src="assets/images/letter-a.png" alt="Antik Logo" style="padding-top: 9px;">
         </li>
@@ -24,16 +27,6 @@
         <li><a href="#">Mezat</a></li>
         <li><a href="#" data-bs-toggle="offcanvas" data-bs-target="#sepet">Sepetim</a></li>
         <li><a href="sergiAlanı.html">Sergi Alanım</a></li>
-        <li id="nav_register" style="float: right; margin-right: 2rem;">
-            <button type="button" class="btn btn-warning btn-sm mt-2">
-                <a href="#" data-bs-toggle="modal" data-bs-target="#login"
-                    style="color: black; padding: 5px; text-decoration: none;">Giriş Yap</a>
-            </button>
-            <button type="button" class="btn btn-warning btn-sm mt-2">
-                <a href="#" data-bs-toggle="modal" data-bs-target="#register"
-                    style="color: black; padding: 5px; text-decoration: none;">Kayıt Ol</a>
-            </button>
-        </li>
     </ul>
     <!-- register modal kısmı -->
     <div class="modal fade" id="register" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog"
@@ -144,64 +137,212 @@
     </div>
     <div style="background-color: #DBDEE2; margin-top: -16px;">
         <h3 style="text-align: center; padding-top: 2rem;">Yerel Mezatlar</h3>
-        <!-- Silder kısmı -->
-        <div style="padding: 2%;">
-            <div id="carouselExampleCaptions" class="carousel slide">
+        <!-- Silder kısmı mdbootstrap-->
+        <div class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-mdb-ride="carousel" data-mdb-carousel-init>
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    <button type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide-to="1"
                         aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    <button type="button" data-mdb-target="#carouselExampleCaptions" data-mdb-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/images/mezat_duyuru_5.jpg" class="d-block w-100"
-                            alt="Mezat İstanbul/Bayrampaşa">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Mezat İstanbul/Bayrampaşa</h5>
-                            <p>10/10/2024 tarihinde İstanbul'da yapılacaktır.</p>
+                        <img src="assets/images/mezat_duyuru_3.jpg" class="d-block w-100" alt="heykel görseli" />
+                        <div class="carousel-caption d-none d-md-block" style="background-color: #FFCA2C;">
+                            <h3 style="color: black; font-weight: bolder;">Yerel Mezat 1</h3>
+                            <h6 style="color: black; font-weight: bolder;">
+                                Mezat Yer: İstanbul / Bakırköy <br>
+                                Mezat Tarih:../../.. <br>
+                                Mezat Saat: .. : .. <br></h6>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/mezat_duyuru_1.jpg" class="d-block w-100" alt="Mezat Ankara/Etimesgut">
-                        <div class="carousel-caption d-none d-md-block" style="color: rgb(7, 31, 27);">
-                            <h5>Mezat Ankara/Etimesgut</h5>
-                            <p>11/10/2024 tarihinde Ankara'da yapılacaktır.</p>
+                        <img src="assets/images/mezat_duyuru_2.jpg" class="d-block w-100"
+                            alt="tablo görseli" />
+                        <div class="carousel-caption d-none d-md-block" style="background-color: #FFCA2C;">
+                            <h3 style="color: black; font-weight: bolder;">Yerel Mezat 2</h3>
+                            <h6 style="color: black; font-weight: bolder;">
+                                Mezat Yer: Malatya / Battalgazi <br>
+                                Mezat Tarih:../../.. <br>
+                                Mezat Saat: .. : .. <br></h6>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/mezat_duyuru_3.jpg" class="d-block w-100"
-                            alt="Mezat Malatya/Battalgazi">
-                        <div class="carousel-caption d-none d-md-block" style="color: rgb(7, 31, 27);">
-                            <h5>Mezat Malatya/Battalgazi</h5>
-                            <p>12/10/2024 tarihinde Malatya'da yapılacaktır. <br></p>
-                        </div>
+                    <img src="assets/images/mezat_duyuru_1.jpg" class="d-block w-100"
+                        alt="Oyuncak dükkan görseli" />
+                    <div class="carousel-caption d-none d-md-block" style="background-color: #FFCA2C;">
+                        <h3 style="color: black; font-weight: bolder;">Yerel Mezat 2</h3>
+                        <h6 style="color: black; font-weight: bolder;">
+                            Mezat Yer: Ankara / Çankaya <br>
+                            Mezat Tarih:../../.. <br>
+                            Mezat Saat: .. : .. <br></h6>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                </div>
+                
+            </div>
+            <button class="carousel-control-prev" type="button" data-mdb-target="#carouselExampleCaptions"
+                data-mdb-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-mdb-target="#carouselExampleCaptions"
+                data-mdb-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <!-- online mezat kısmı -->
+    <h3 style="text-align: center;" class="mt-4">Online Müzayede</h3>
+
+    <div class="container mt-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
+                        alt="Chicago Skyscrapers" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-light list-group-small">
+                        <li class="list-group-item px-4">Cras justo odio</li>
+                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
+                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
+                        alt="Chicago Skyscrapers" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-light list-group-small">
+                        <li class="list-group-item px-4">Cras justo odio</li>
+                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
+                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
+                        alt="Chicago Skyscrapers" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-light list-group-small">
+                        <li class="list-group-item px-4">Cras justo odio</li>
+                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
+                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
+                        alt="Chicago Skyscrapers" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-light list-group-small">
+                        <li class="list-group-item px-4">Cras justo odio</li>
+                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
+                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
+                        alt="Chicago Skyscrapers" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-light list-group-small">
+                        <li class="list-group-item px-4">Cras justo odio</li>
+                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
+                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
+                        alt="Chicago Skyscrapers" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-light list-group-small">
+                        <li class="list-group-item px-4">Cras justo odio</li>
+                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
+                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
+                        alt="Chicago Skyscrapers" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <ul class="list-group list-group-light list-group-small">
+                        <li class="list-group-item px-4">Cras justo odio</li>
+                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
+                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <h3 style="text-align: center;">Online Mezatlar</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores rerum fuga iusto consequatur perferendis
-            quod at eveniet! Explicabo ratione porro doloremque debitis assumenda doloribus, itaque quas, incidunt ipsum
-            beatae suscipit.
-            Commodi quasi tenetur suscipit dolorem sunt, vel earum numquam dignissimos aliquid accusamus, minima nemo
-            reiciendis exercitationem, aspernatur dolores? Veniam eligendi aliquid distinctio quia? Mollitia atque rem
-            eligendi alias officiis perferendis?
-            Qui voluptate maiores consequatur repudiandae sint magni voluptatum inventore accusamus adipisci ut, modi
-            necessitatibus reprehenderit ea aperiam doloribus debitis laborum ipsum facilis! Ipsum, culpa odit.
-            Similique soluta veritatis a vitae.</p>
     </div>
     <!-- sepet kısmı(offcanvas) -->
 
@@ -263,14 +404,11 @@
 
         </div>
     </div>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-        </script>
+    <!-- MDB -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-        </script>
+
 </body>
 
 </html>
