--- a/sergiAlanı.html
+++ b/sergiAlanı.html
@@ -5,13 +5,15 @@
     <title>AntikApp - Sergi Alanım</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    <link rel="stylesheet" href="style_profil.css">
+
+    <link rel="stylesheet" href="style.css">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -24,7 +26,7 @@
         <li><a href="#" style="color: #FFCA2C;">AntikApp</a></li>
         <li style="margin-left:28%"><a href="anasayfa.html">Anasayfa</a></li>
         <li><a href="mezat.html">Mezat</a></li>
-        <li><a href="#" data-bs-toggle="offcanvas" data-bs-target="#sepet">Sepetim</a></li> 
+        <li><a href="#" data-bs-toggle="offcanvas" data-bs-target="#sepet">Sepetim</a></li>
         <li><a href="#">Sergi Alanım</a></li>
         <li id="nav_register" style="float: right; margin-right: 2rem;">
             <button type="button" class="btn btn-warning btn-sm mt-2">
@@ -204,7 +206,9 @@
 
         </div>
     </div>
-    
+    <!-- MDB -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
