Anasayfaya kayan kapak görselleri eklendi online müzayede kısmında geliştirmeler yapıldı.

--- a/mezat.html
+++ b/mezat.html
@@ -160,8 +160,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/mezat_duyuru_2.jpg" class="d-block w-100"
-                            alt="tablo görseli" />
+                        <img src="assets/images/mezat_duyuru_2.jpg" class="d-block w-100" alt="tablo görseli" />
                         <div class="carousel-caption d-none d-md-block" style="background-color: #FFCA2C;">
                             <h3 style="color: black; font-weight: bolder;">Yerel Mezat 2</h3>
                             <h6 style="color: black; font-weight: bolder;">
@@ -171,18 +170,18 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                    <img src="assets/images/mezat_duyuru_1.jpg" class="d-block w-100"
-                        alt="Oyuncak dükkan görseli" />
-                    <div class="carousel-caption d-none d-md-block" style="background-color: #FFCA2C;">
-                        <h3 style="color: black; font-weight: bolder;">Yerel Mezat 2</h3>
-                        <h6 style="color: black; font-weight: bolder;">
-                            Mezat Yer: Ankara / Çankaya <br>
-                            Mezat Tarih:../../.. <br>
-                            Mezat Saat: .. : .. <br></h6>
+                        <img src="assets/images/mezat_duyuru_1.jpg" class="d-block w-100"
+                            alt="Oyuncak dükkan görseli" />
+                        <div class="carousel-caption d-none d-md-block" style="background-color: #FFCA2C;">
+                            <h3 style="color: black; font-weight: bolder;">Yerel Mezat 2</h3>
+                            <h6 style="color: black; font-weight: bolder;">
+                                Mezat Yer: Ankara / Çankaya <br>
+                                Mezat Tarih:../../.. <br>
+                                Mezat Saat: .. : .. <br></h6>
+                        </div>
                     </div>
                 </div>
-                </div>
-                
+
             </div>
             <button class="carousel-control-prev" type="button" data-mdb-target="#carouselExampleCaptions"
                 data-mdb-slide="prev">
@@ -199,146 +198,144 @@
 
     <!-- online mezat kısmı -->
     <h3 style="text-align: center;" class="mt-4">Online Müzayede</h3>
-
     <div class="container mt-4">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4" style="text-align: justify;">
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
-                        alt="Chicago Skyscrapers" />
+                    <img src="assets/online müzayede/ayakkabı.jpg" class="card-img-top h-50" alt="ayakkabı" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-title h-50"><b>X Markası Y Kolleksiyonu Spor Ayakkabı</b></h3>
+                        <p class="card-text"> X markasının 2014 yılında özel kolleksiyon olarak sadece 100 çift olarak
+                            çıkardığı ayakabı koleksiyonun 87. çiftidir.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
-                        <li class="list-group-item px-4">Cras justo odio</li>
-                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
-                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                        <li class="list-group-item px-4"><b>Satıcı İsmi : </b> A kişisi</li>
+                        <li class="list-group-item px-4"><b>Son Teklif : </b>2900 birim lira</li>
+                        <li class="list-group-item px-4"><b>Hemen Al Fiyatı : </b>5000 birim lira</li>
+                        <li class="list-group-item px-4"><b>Teklif Artış Miktarı : </b>100'er birim</li>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <button type="button" class="btn btn-outline-success">Hemen Al</button>
+                        <button type="button" class="btn btn-outline-warning">Teklif Arttır</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
-                        alt="Chicago Skyscrapers" />
+                    <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-title h-50"><b>Payorit Marka Daktilo</b></h3>
+                        <p class="card-text"> 1954 yılı İngiliz üretimi katip daktilosudur.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
-                        <li class="list-group-item px-4">Cras justo odio</li>
-                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
-                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                        <li class="list-group-item px-4"><b>Satıcı İsmi : </b> X Müzesi</li>
+                        <li class="list-group-item px-4"><b>Son Teklif : </b>1750 birim lira</li>
+                        <li class="list-group-item px-4"><b>Hemen Al Fiyatı : </b>5000 birim lira</li>
+                        <li class="list-group-item px-4"><b>Teklif Artış Miktarı : </b>150'er birim</li>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <button type="button" class="btn btn-outline-success">Hemen Al</button>
+                        <button type="button" class="btn btn-outline-warning">Teklif Arttır</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
-                        alt="Chicago Skyscrapers" />
+                    <img src="assets/online müzayede/film_poster.jpg" class="card-img-top h-50"
+                        alt="film poster kitap" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-title h-50"><b>Film Posterleri Kitabı</b></h3>
+                        <p class="card-text"> 1900-1999 arası Hollywood'a yayınlanan filmlerin afiş ve posterlerinin toplandığı kitaptır.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
-                        <li class="list-group-item px-4">Cras justo odio</li>
-                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
-                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                        <li class="list-group-item px-4"><b>Satıcı İsmi : </b> B kişisi</li>
+                        <li class="list-group-item px-4"><b>Son Teklif : </b>450 birim lira</li>
+                        <li class="list-group-item px-4"><b>Hemen Al Fiyatı : </b>1000 birim lira</li>
+                        <li class="list-group-item px-4"><b>Teklif Artış Miktarı : </b>25'er birim</li>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <button type="button" class="btn btn-outline-success">Hemen Al</button>
+                        <button type="button" class="btn btn-outline-warning">Teklif Arttır</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
-                        alt="Chicago Skyscrapers" />
+                    <img src="assets/online müzayede/madeni_para.jpg" class="card-img-top h-50"
+                        alt="madeni para koleksiyonu" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-title h-50"><b>Bizans Dönemi Madeni Para</b></h3>
+                        <p class="card-text"> 1250-1350'li yıllar arasında üretildiği düşünülen Doğu Roma madeni para kolleksiyonudur. Exspertiz Raporu mevcuttur.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
-                        <li class="list-group-item px-4">Cras justo odio</li>
-                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
-                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                        <li class="list-group-item px-4"><b>Satıcı İsmi : </b> Malatya X Müzesi</li>
+                        <li class="list-group-item px-4"><b>Son Teklif : </b>1400 birim lira</li>
+                        <li class="list-group-item px-4"><b>Hemen Al Fiyatı : </b>5000 birim lira</li>
+                        <li class="list-group-item px-4"><b>Teklif Artış Miktarı : </b>200'er birim</li>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <button type="button" class="btn btn-outline-success">Hemen Al</button>
+                        <button type="button" class="btn btn-outline-warning">Teklif Arttır</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
-                        alt="Chicago Skyscrapers" />
+                    <img src="assets/online müzayede/old_money_koleksiyon.jpg" class="card-img-top h-50"
+                        alt="old old_money_koleksiyon" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-title h-50"><b>Güncel 25 Ülkelesinin Para Kolleksiyonu </b></h3>
+                        <p class="card-text">25 ülkeye ait güncel olarak tedavülde bulunan 84 adet kağıt baknotlarıdır. Güncel kurlarla sadece paraların değeri 3500 liradır.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
-                        <li class="list-group-item px-4">Cras justo odio</li>
-                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
-                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                        <li class="list-group-item px-4"><b>Satıcı İsmi : </b> Z kişisi</li>
+                        <li class="list-group-item px-4"><b>Son Teklif : </b>5000birim lira</li>
+                        <li class="list-group-item px-4"><b>Hemen Al Fiyatı : </b>10000 birim lira</li>
+                        <li class="list-group-item px-4"><b>Teklif Artış Miktarı : </b>300'er birim</li>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <button type="button" class="btn btn-outline-success">Hemen Al</button>
+                        <button type="button" class="btn btn-outline-warning">Teklif Arttır</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
-                        alt="Chicago Skyscrapers" />
+                    <img src="assets/online müzayede/pronto_600.jpg" class="card-img-top h-50"
+                        alt="pronto_600 kamera" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-title h-50"><b>Polarcid Marka Pronto600 Kamera</b></h3>
+                        <p class="card-text"> 2000'li yılların başında üretilmiş ilk renkli fotoğraf çeken makinalardan biridir.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
-                        <li class="list-group-item px-4">Cras justo odio</li>
-                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
-                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                        <li class="list-group-item px-4"><b>Satıcı İsmi : </b>X Kamera Dükkanı</li>
+                        <li class="list-group-item px-4"><b>Son Teklif : </b>650birim lira</li>
+                        <li class="list-group-item px-4"><b>Hemen Al Fiyatı : </b>1500 birim lira</li>
+                        <li class="list-group-item px-4"><b>Teklif Artış Miktarı : </b>50'er birim</li>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <button type="button" class="btn btn-outline-success">Hemen Al</button>
+                        <button type="button" class="btn btn-outline-warning">Teklif Arttır</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/062.webp" class="card-img-top"
-                        alt="Chicago Skyscrapers" />
+                    <img src="assets/online müzayede/sulcuptre_kitap.jpg" class="card-img-top h-50"
+                        alt="koleksiyon kitabı" />
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-title h-50"><b>Sculpture İlk Basım</b></h3>
+                        <p class="card-text">Dünyaca ünlü romanın ilk bakısıdır. Koleksiyon değeri gün geçtikçe artmaktadır.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
-                        <li class="list-group-item px-4">Cras justo odio</li>
-                        <li class="list-group-item px-4">Dapibus ac facilisis in</li>
-                        <li class="list-group-item px-4">Vestibulum at eros</li>
+                        <li class="list-group-item px-4"><b>Satıcı İsmi : </b>X Kitapevi</li>
+                        <li class="list-group-item px-4"><b>Son Teklif : </b>700 birim lira</li>
+                        <li class="list-group-item px-4"><b>Hemen Al Fiyatı : </b>1000 birim lira</li>
+                        <li class="list-group-item px-4"><b>Teklif Artış Miktarı : </b>25'er birim</li>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <button type="button" class="btn btn-outline-success">Hemen Al</button>
+                        <button type="button" class="btn btn-outline-warning">Teklif Arttır</button>
                     </div>
                 </div>
             </div>
